# feishin

./: .gitignore  README.md  package-lock.json  package.json
.erb/configs/: webpack.config.web.prod.ts
.github/workflows/: publish-pr.yml
patches/: @tauri-apps+api+1.5.5.patch
release/app/: package-lock.json
src-tauri/: Cargo.toml
src-tauri/desktop/: Cargo.toml  tauri.conf.json
src-tauri/desktop/src/: main.rs
src-tauri/desktop/src/routers/: mpv.rs
src-tauri/shared/: Cargo.toml
src-tauri/shared/src/: lib.rs
src/i18n/locales/: en.json
src/main/: main.ts
src/main/preload/: browser.ts  ipc.ts  remote.ts
src/remote/: types.ts
src/remote/components/: remote-container.tsx
src/renderer/: app.tsx  preload.d.ts  types.ts
src/renderer/api/: controller.ts  features-types.ts  tauri.ts  types.ts
src/renderer/api/jellyfin/: jellyfin-api.ts  jellyfin-controller.ts  jellyfin-normalize.ts  jellyfin-types.ts
src/renderer/api/navidrome/: navidrome-api.ts  navidrome-controller.ts  navidrome-normalize.ts  navidrome-types.ts
src/renderer/api/subsonic/: subsonic-api.ts  subsonic-controller.ts  subsonic-normalize.ts  subsonic-types.ts
src/renderer/components/card/: poster-card.tsx
src/renderer/components/feature-carousel/: index.tsx
src/renderer/components/virtual-table/: index.tsx
src/renderer/features/context-menu/: context-menu-items.tsx  context-menu-provider.tsx  events.ts
src/renderer/features/lyrics/: synchronized-lyrics.tsx
src/renderer/hooks/: use-song-change.ts
src/renderer/router/: app-router.tsx
src/renderer/store/: event.store.ts  player.store.ts  settings.store.ts
src/renderer/styles/: global.scss
(+34 files in other folders)
