[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }


[dependencies]
async-stream = { version = "0.3" }
libmpv2 = { version = "3.0", features = [] }
rspc = "0.2.0"
rspc-tauri = { version = "0.0.1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.3", features = [
  "window-unmaximize",
  "window-minimize",
  "window-close",
  "window-maximize",
  "dialog-open",
  "global-shortcut-all",
] }
tauri-specta = { version = "1", features = ["javascript", "typescript"] }
tokio = { version = "1.37.0", features = ["full"] }
specta = "1.0.5"

shared = { path = "../shared", features = ["desktop"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
