[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmpv2 = { version = "3.0", features = [], optional = true }
rspc = "0.2.0"
specta = "1.0.5"
tokio = { version = "1.37.0", features = ["full"] }

[features]
default = ["desktop"]
desktop = ["dep:libmpv2"]
